2010-03-10  Chang Shu  <chang.shu@nokia.com>

Reviewed by Darin Adler.

        While calculating alpha channel, convert the floating point value to
        an integer in [0, 256) with equal distribution.
        https://bugs.webkit.org/show_bug.cgi?id=22150

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseColorParameters):

2010-03-10  Chang Shu  <chang.shu@nokia.com>

        Reviewed by Darin Adler.

        While calculating alpha channel, convert the floating point value to
        an integer in [0, 256) with equal distribution.
        Updated test results based on this new behavior.
        https://bugs.webkit.org/show_bug.cgi?id=22150

        * fast/canvas/canvas-alphaImageData-behavior-expected.txt:
        * fast/canvas/canvas-alphaImageData-behavior.js:
        * platform/qt/Skipped:



Canonical link: https://commits.webkit.org/47122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55827 268f45cc-cd09-0410-ab3c-d52691b4dbfc